--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.4.1",
     "magnific-popup": "^1.1.0",
     "popper.js": "^1.15.0",
+    "v-viewer": "^1.4.2",
     "vue": "^2.5.2",
     "vue-aos": "^1.0.1",
     "vue-gallery-slideshow": "^1.4.0",
