--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.1",
     "isotope-layout": "^3.0.6",
     "jquery": "^3.4.1",
     "magnific-popup": "^1.1.0",
     "popper.js": "^1.15.0",
     "v-viewer": "^1.4.2",
-    "vue": "^2.5.2",
+    "vue": "^2.6.10",
     "vue-aos": "^1.0.1",
     "vue-gallery-slideshow": "^1.4.0",
     "vue-grid-layout": "^2.3.6",
