--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.1",
     "isotope-layout": "^3.0.6",
     "jquery": "^3.4.1",
+    "laravel-echo": "^1.6.1",
     "magnific-popup": "^1.1.0",
     "popper.js": "^1.15.0",
     "v-viewer": "^1.4.2",
@@ -29,7 +31,8 @@
     "vue2-smooth-scroll": "^1.1.0",
     "vue2-transitions": "^0.3.0",
     "vueisotope": "^3.1.2",
-    "vuetify": "^2.0.11"
+    "vuetify": "^2.0.11",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -40,7 +43,7 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
+    "babel-preset-stage-2": "^6.24.1",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
@@ -55,6 +58,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "pusher-js": "^5.0.2",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
