--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "jquery": "^3.4.1",
     "laravel-echo": "^1.6.1",
     "magnific-popup": "^1.1.0",
+    "mdbootstrap": "^4.8.10",
+    "mdbvue": "^5.8.3",
+    "moment": "^2.24.0",
     "popper.js": "^1.15.0",
+    "promise-polyfill": "^8.1.3",
     "v-viewer": "^1.4.2",
     "vue": "^2.6.10",
     "vue-aos": "^1.0.1",
@@ -27,12 +31,14 @@
     "vue-lazyload": "^1.3.2",
     "vue-owl-carousel": "^2.0.3",
     "vue-router": "^3.0.1",
+    "vue-truncate-filter": "^1.1.7",
     "vue-wow": "^1.2.0",
     "vue2-smooth-scroll": "^1.1.0",
     "vue2-transitions": "^0.3.0",
     "vueisotope": "^3.1.2",
-    "vuetify": "^2.0.11",
-    "vuex": "^3.1.1"
+    "vuetify": "^1.5.19",
+    "vuex": "^3.1.1",
+    "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -52,25 +58,31 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
     "pusher-js": "^5.0.2",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.0.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^1.0.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack": "^3.0.0",
+    "webpack-cli": "2.0.13",
+    "webpack-config-utils": "2.0.0",
+    "webpack-dev-server": "^2.7.1",
+    "webpack-validator": "2.2.7"
   },
   "engines": {
     "node": ">= 6.0.0",
