--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.1",
+    "install": "^0.13.0",
     "isotope-layout": "^3.0.6",
     "jquery": "^3.4.1",
     "laravel-echo": "^1.6.1",
@@ -20,11 +21,13 @@
     "mdbootstrap": "^4.8.10",
     "mdbvue": "^5.8.3",
     "moment": "^2.24.0",
+    "npm": "^6.13.4",
     "popper.js": "^1.15.0",
     "promise-polyfill": "^8.1.3",
     "v-viewer": "^1.4.2",
     "vue": "^2.6.10",
     "vue-aos": "^1.0.1",
+    "vue-carousel": "^0.18.0",
     "vue-gallery-slideshow": "^1.4.0",
     "vue-grid-layout": "^2.3.6",
     "vue-image-lightbox": "^6.4.0",
@@ -58,7 +61,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
