--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "popper.js": "^1.15.0",
     "promise-polyfill": "^8.1.3",
     "v-viewer": "^1.4.2",
+    "vform": "^1.0.1",
     "vue": "^2.6.10",
     "vue-aos": "^1.0.1",
     "vue-carousel": "^0.18.0",
@@ -32,6 +33,7 @@
     "vue-grid-layout": "^2.3.6",
     "vue-image-lightbox": "^6.4.0",
     "vue-lazyload": "^1.3.2",
+    "vue-notification": "^1.3.20",
     "vue-owl-carousel": "^2.0.3",
     "vue-router": "^3.0.1",
     "vue-truncate-filter": "^1.1.7",
