--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "npm": "^6.13.4",
     "popper.js": "^1.15.0",
     "promise-polyfill": "^8.1.3",
+    "sweet-modal-vue": "^2.0.0",
     "v-viewer": "^1.4.2",
     "vform": "^1.0.1",
     "vue": "^2.6.10",
